@@ -60,6 +60,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6639) Use a consistent default for upload directories
 * Preserve entered reason when reporting unconfirmed lock on Special:Lockdb
 * (bug 6642) Don't offer to unlock the database when it isn't locked
+* cleanupTitles.php changed from --dry-run option to --fix, so default
+  behavior is now a non-invasive check as with namespaceDupes.php
+
 
 == Languages updated ==
 
